# RSiena

./: .Rinstignore  ChangeLog  DESCRIPTION  MD5  NAMESPACE  NEWS.md  changeLog  cleanup  cleanup.win  configure  configure.ac  configure.win
R/: RSienaRDocumentation.r  Sienatest.r  TransformScript.R  bayes.r  checkImpossibleChanges.r  effects.r  effectsDocumentation.r  effectsInfo.R  effectsMethods.r  getActorStatistics.r  getTargets.r  globals.r  importanceSampling.r  influenceTables.r  initializeFRAN.r  interrupt.r  iwlsm.R  maxlike.r  maxlikec.r  maxlikecalc.r  observationErrors.r  phase1.r  phase2.r  phase3.r  print01Report.r  print07Report.r  printDataReport.r  printInitialDescription.r  robmon.r  selectionTables.r  siena01.r  siena07.r  siena07gui.r  siena08.r  sienaDataCreate.r  sienaDataCreateFromSession.r  sienaGOF.r  sienaModelCreate.r  sienaRI.r  sienaRIDynamics.r  (+8 more)
data/: RSiena.rda  allEffects.R  allEffects.csv  allEffects.rda
inst/: CITATION  sienascript
inst/doc/: RSiena.bib  RSiena_Manual.tex
inst/examples/: Sampson_t2.txt  Sampson_t3.txt  Sampson_t4.txt  baerveldt3.csv  baerveldt34.csv  baerveldt4.csv  cbe1.sim  cbe3.sim  cbe4.sim  cbe6.sim  eies.csv  klas12b_netbeh.csv  klas12b_netbeha.csv  s50_d1.net  s50_d2.net  s50_d3.net  s50_s_asp.csv  s50_sa.csv  sienafreshman.csv  vandebunt.csv
inst/scripts/: RSienaSNADescriptives.R  Rscript01DataFormat.R  Rscript02SienaVariableFormat.R  Rscript03SienaRunModel.R  Rscript04SienaBehaviour.R
man/: RSiena-package.Rd  Wald.Rd  allEffects.Rd  as_composition_siena.Rd  as_covariate_rsiena.Rd  as_dependent_rsiena.Rd  as_nodeset_rsiena.Rd  bayes.Rd  coCovar.Rd  coDyadCovar.Rd  edit.sienaEffects.Rd  effectsDocumentation.Rd  funnelPlot.Rd  getEffects.Rd  hn3401.Rd  includeEffects.Rd  includeGMoMStatistics.Rd  includeInteraction.Rd  includeTimeDummy.Rd  influenceTable.Rd  installGui.Rd  interpret_influence.Rd  interpret_selection.Rd  interpret_size.Rd  interpret_size_dynamics.Rd  iwlsm.Rd  make_constraint.Rd  make_data_rsiena.Rd  make_group_rsiena.Rd  make_specification.Rd  maxlikefn.Rd  meta_siena.Rd  model.create.Rd  n3401.Rd  plot.sienaTimeTest.Rd  print.sienaEffects.Rd  print.sienaMeta.Rd  print.sienaTest.Rd  print01Report.Rd  s50.Rd  (+43 more)
po/: R-RSiena.pot  R-ko.mo  R-ko.po
src/: Makefile.profile  Makefile.win  Makevars  Makevars.in  Makevars.win  init.c  init.cpp  siena07.cpp  siena07internals.cpp  siena07internals.h  siena07models.cpp  siena07models.h  siena07setup.cpp  siena07setup.h  siena07utilities.cpp  siena07utilities.h  sources.list  x2scrap.txt
src/data/: ActorSet.cpp  ActorSet.h  BehaviorLongitudinalData.cpp  BehaviorLongitudinalData.h  ChangingCovariate.cpp  ChangingCovariate.h  ChangingDyadicCovariate.cpp  ChangingDyadicCovariate.h  CommonNeighborIterator.cpp  CommonNeighborIterator.h  ConstantCovariate.cpp  ConstantCovariate.h  ConstantDyadicCovariate.cpp  ConstantDyadicCovariate.h  Covariate.cpp  Covariate.h  Data.cpp  Data.h  DataUtils.cpp  DataUtils.h  DyadicCovariate.cpp  DyadicCovariate.h  DyadicCovariateValueIterator.cpp  DyadicCovariateValueIterator.h  ExogenousEvent.cpp  ExogenousEvent.h  IncidentTieIterator.cpp  IncidentTieIterator.h  LongitudinalData.cpp  LongitudinalData.h  Network.cpp  Network.h  NetworkConstraint.cpp  NetworkConstraint.h  NetworkLongitudinalData.cpp  NetworkLongitudinalData.h  OneModeNetwork.cpp  OneModeNetwork.h  OneModeNetworkLongitudinalData.cpp  OneModeNetworkLongitudinalData.h  (+1 more)
src/model/: EffectInfo.cpp  EffectInfo.h  EpochSimulation.cpp  EpochSimulation.h  Function.cpp  Function.h  Model.cpp  Model.h  SdeSimulation.cpp  State.cpp  State.h  StatisticCalculator.cpp  StatisticCalculator.h
src/model/effects/: AllEffects.h  AlterCovariateActivityEffect.cpp  AltersCovariateAvAltEffect.cpp  AltersCovariateAvSimEffect.cpp  AltersCovariateAverageEffect.cpp  AltersCovariateAverageEffect.h  AltersCovariateTotSimEffect.cpp  AltersDist2CovariateAverageEffect.cpp  AltersInDist2CovariateAverageEffect.cpp  AntiIsolateEffect.cpp  AverageAlterDist2Effect.cpp  AverageAlterEffect.cpp  AverageAlterEffect.h  AverageAlterInDist2Effect.cpp  AverageInAlterEffect.cpp  AverageReciprocatedAlterEffect.cpp  AverageReciprocatedAlterEffect.h  AverageSimilarityEffect.cpp  AverageSimilarityEffect.h  BalanceEffect.cpp  BalanceEffect.h  BehaviorDependentBehaviorEffect.cpp  BehaviorDependentBehaviorEffect.h  BehaviorEffect.cpp  BehaviorEffect.h  BehaviorMainBehaviorEffect.cpp  BehaviorMainBehaviorEffect.h  BehaviorRateEffect.cpp  BetweennessEffect.cpp  BetweennessEffect.h  BothDegreesEffect.cpp  BothDegreesEffect.h  ChangingCovariateBehaviorEffect.cpp  ChangingCovariateBehaviorEffect.h  ChangingCovariateMainBehaviorEffect.cpp  ChangingCovariateMainBehaviorEffect.h  ConstantCovariateBehaviorEffect.cpp  ConstantCovariateBehaviorEffect.h  ConstantCovariateMainBehaviorEffect.cpp  ConstantCovariateMainBehaviorEffect.h  (+160 more)
src/model/filters/: AtLeastOneFilter.cpp  AtLeastOneFilter.h  DisjointFilter.cpp  DisjointFilter.h  HigherFilter.cpp  HigherFilter.h  LowerFilter.cpp  LowerFilter.h  PermittedChangeFilter.h
src/model/ml/: BehaviorChange.cpp  BehaviorChange.h  Chain.cpp  Chain.h  MLSimulation.cpp  MLSimulation.h  MiniStep.cpp  MiniStep.h  NetworkChange.cpp  NetworkChange.h  Option.cpp  Option.h
src/model/tables/: BetweennessTable.cpp  BetweennessTable.h  Cache.cpp  Cache.h  ConfigurationTable.cpp  ConfigurationTable.h  CriticalInStarTable.cpp  CriticalInStarTable.h  EgocentricConfigurationTable.cpp  (+8 more)
src/network/: CommonNeighborIterator.cpp  CommonNeighborIterator.h  INetworkChangeListener.h  IncidentTieIterator.cpp  IncidentTieIterator.h  Network.cpp  Network.h  NetworkUtils.cpp  NetworkUtils.h  OneModeNetwork.cpp  OneModeNetwork.h  TieIterator.cpp
src/utils/: NamedObject.cpp  NamedObject.h  Random.cpp  Random.h  SqrtTable.cpp  SqrtTable.h  Utils.cpp  Utils.h
src/win32/: Makefile  siena.c  siena_rc.rc
tests/: newparallel.R  newparallel.Rout.save  parallel.R  parallel.Rout.save  s50.csv  s50_d1.net  s50_d2.net  s50e.csv  s50paj.csv  scriptfile.Rout.save  scriptfile.Rout.win  scripts.R  scripts.Rout.save
(+120 files in other folders)
